--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,6 +18,30 @@ body {
     background-color: white;
     padding: 5px;
   }
+
+  .dropdown-content {
+    position: absolute;
+    background-color: white;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    right: 0;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
+
+#sair {
+  color: red;
+}
   
   .perfil {
     height: 30px;
