--- a/public/css/style.css
+++ b/public/css/style.css
@@ -142,3 +142,62 @@ body {
     z-index: 1; /* Garante que o footer fique sobre a imagem */
   }
   
+  #editOverlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Escurece o fundo */
+    display: none; /* Esconde o overlay inicialmente */
+    justify-content: center;
+    align-items: center;
+    z-index: 1000; /* Garante que o overlay fique acima de tudo */
+    transition: opacity 0.3s ease-in-out; /* Animação suave */
+}
+
+#editModal {
+    background-color: white;
+    padding: 20px;
+    border-radius: 8px;
+    width: 400px;
+    max-width: 90%;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+#editModal h2 {
+    margin-top: 0;
+}
+
+#editModal input {
+    width: 100%;
+    margin: 10px 0;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+#editModal button {
+    width: 100%;
+    padding: 10px;
+    background-color: #a7d7ff;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+#editModal button:hover {
+    background-color: #6a94b7;
+}
+
+#editOverlay.show {
+    display: flex; /* Exibe o overlay */
+    opacity: 1; /* Faz com que o overlay tenha opacidade total */
+}
+
+#editOverlay.hide {
+    opacity: 0; /* Torna o overlay invisível */
+    pointer-events: none; /* Impede a interação com o overlay enquanto ele estiver escondido */
+}
+
