--- a/public/css/style.css
+++ b/public/css/style.css
@@ -201,3 +201,39 @@ body {
     pointer-events: none; /* Impede a interação com o overlay enquanto ele estiver escondido */
 }
 
+.espaco {
+  display: inline-block;
+  width: 300px;
+  margin: 20px;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  text-align: center;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.espaco-img {
+  width: 100%;
+  height: auto;
+  border-radius: 5px;
+}
+
+.espaco h3 {
+  font-size: 1.2em;
+  margin-top: 10px;
+}
+
+.espaco p {
+  color: #777;
+  font-size: 1em;
+  margin-top: 5px;
+}
+
+.espaco-link {
+  text-decoration: none;
+  color: #333;
+}
+
+.espaco:hover {
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.15);
+}
