--- a/public/css/style.css
+++ b/public/css/style.css
@@ -141,6 +141,15 @@ body {
     position: absolute;
     z-index: 1; /* Garante que o footer fique sobre a imagem */
   }
+
+.espacos-container button {
+  box-sizing: border-box; /* Garante que padding e border não aumentem o tamanho */
+  padding: 0px 10px;
+  margin: 10px;
+  width: 300px;
+  height: 40px;
+  text-align: center;
+}
   
   /* Estilo do Modal de Edição */
 #editOverlay {
@@ -256,6 +265,69 @@ body {
 #deleteOverlay.hide {
   opacity: 0;
   pointer-events: none; /* Impede interação enquanto está escondido */
+}
+
+/* Estilo para o Modal de Adicionar Novo Espaço */
+#addOverlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Fundo semitransparente */
+  display: none; /* Inicialmente escondido */
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+  transition: opacity 0.3s ease-in-out; /* Transição suave */
+}
+
+#addModal {
+  background-color: white;
+  padding: 20px;
+  border-radius: 8px;
+  width: 400px;
+  max-width: 90%;
+  max-height: 80vh; /* Garante que o modal não ocupe mais que 80% da altura da tela */
+  overflow-y: auto; /* Permite o scroll quando o conteúdo for maior que o espaço disponível */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+#addModal h2 {
+  margin-top: 0;
+}
+
+#addModal input, #addModal textarea, #addModal select {
+  width: 100%;
+  margin: 10px 0;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+#addModal button {
+  width: 100%;
+  padding: 10px;
+  background-color: #a7d7ff;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+#addModal button:hover {
+  background-color: #6a94b7;
+}
+
+/* Mostrar o modal de adicionar quando necessário */
+#addOverlay.show {
+  display: flex; /* Exibe o overlay */
+  opacity: 1; /* Torna o overlay totalmente visível */
+}
+
+#addOverlay.hide {
+  opacity: 0; /* Torna invisível quando escondido */
+  pointer-events: none; /* Impede interação com o fundo enquanto oculto */
 }
 
 .espaco {
