--- a/public/css/cadastro.css
+++ b/public/css/cadastro.css
@@ -4,6 +4,10 @@ html, body {
 }
 
 body {
+    background-image: url('../assets/fundomain.jpg'); /* Path to your background image */
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
     font-family: Arial, sans-serif;
     margin: 0;
     display: flex;
