brinks, esse é o ultimo commit de hj

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -443,6 +443,32 @@ body {
   display: none;
 }
 
+.espaco-reserva {
+  background-color: #fff;
+  padding: 15px;
+  margin: 15px 0;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease;
+  max-width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.nome-espaco {
+  font-size: 1.4em;
+  font-weight: bold;
+  color: #333;
+  margin-bottom: 10px;
+  text-align: center;
+}
+
+.espaco-reserva:hover {
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+
+}
+
 /* Estilo do botão de cancelar */
 .espaco-reserva .btn-cancelar {
   background-color: #ff4747;
@@ -500,16 +526,18 @@ body {
   display: inline-block;
   width: 300px;
   margin: 20px;
-  padding: 10px;
+  padding: 15px;
   border: 1px solid #ddd;
   border-radius: 5px;
   text-align: center;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  background-color: #fff;
 }
 
 .espaco-img {
   width: 100%;
-  height: auto;
+  height: 200px; /* Tamanho fixo para as imagens */
+  object-fit: cover; /* Garante que a imagem será cortada para preencher o espaço sem distorcer */
   border-radius: 5px;
 }
 
@@ -533,3 +561,264 @@ body {
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.15);
 }
 
+.espaco-actions {
+  
+  
+  gap: 1px; /* Espaço entre os botões */
+}
+.espaco-actions button {
+  padding: 8px 16px;
+  font-size: 1em;
+  cursor: pointer;
+  border: 2px;
+  border-radius: 5px;
+  margin: 4px 0px 4px 0px;
+}
+
+
+.container-perfil {
+  width: 100%; /* Tornar o container 100% da largura disponível */
+  max-width: 800px; /* Tamanho máximo do container */
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  margin: 0 auto; /* Espaçamento à esquerda */
+}
+
+
+/* Título do perfil */
+.container-perfil h2 {
+  font-size: 1.8rem;
+  margin-bottom: 20px;
+  text-align: center;
+  color: #333;
+}
+
+/* Informações do perfil */
+.perfil-info {
+  margin-bottom: 20px;
+}
+
+.perfil-info p {
+  font-size: 1.1rem;
+  line-height: 1.6;
+  color: #555;
+}
+
+.perfil-info strong {
+  color: #333;
+}
+
+/* Botão de Editar */
+#editButton {
+  padding: 10px 20px;
+  background-color: #28a745;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 1.1rem;
+  display: block;
+  margin: 20px auto;
+}
+
+#editButton:hover {
+  background-color: #218838;
+}
+
+.div-sobre-espaco {
+  width: 100%;
+  max-width: 900px;
+  margin: 20px auto;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  text-align: center; /* Centraliza o conteúdo */
+}
+
+.div-sobre-espaco h1 {
+  font-size: 2em;
+  margin-bottom: 20px;
+  color: #333;
+}
+
+.div-sobre-espaco img {
+  width: 100%;
+  height: auto;
+  max-height: 400px; /* Limite de altura para a imagem */
+  object-fit: cover; /* Ajusta a imagem sem deformar */
+  border-radius: 8px;
+  margin-bottom: 20px; /* Espaçamento abaixo da imagem */
+}
+
+.div-sobre-espaco p {
+  font-size: 1.1em;
+  margin-bottom: 15px;
+  font-weight: bold;
+  
+}
+
+.div-sobre-espaco p strong {
+  font-weight: bold;
+  
+}
+
+.div-sobre-espaco span {
+  font-weight: normal; /* Garante que o texto dentro do <span> não fique em negrito */
+}
+
+#preco-espaco {
+  font-weight: bold;
+  color: #e74c3c; /* Cor de destaque para o preço */
+  font-size: 1.2em;
+}
+
+#reservar-link {
+  text-decoration: none; /* Remove sublinhado do link */
+}
+
+.botao-reservar {
+  background-color: #3498db; /* Cor do botão */
+  color: #fff;
+  font-size: 1.1em;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease; /* Animação suave para a cor */
+}
+
+.botao-reservar:hover {
+  background-color: #2980b9; /* Cor do botão ao passar o mouse */
+}
+
+.espacos-toggle {
+  display: flex;
+  justify-content: center; /* Alinha os itens horizontalmente no centro */
+  margin: 20px 0; /* Adiciona espaço ao redor do grupo de itens */
+}
+
+.espacos-toggle-item {
+  font-size: 1.2em; /* Deixa o texto maior */
+  margin: 0 15px; /* Espaçamento entre os itens */
+  padding: 10px;
+  cursor: pointer; /* Indicador de que é clicável */
+  transition: all 0.3s ease; /* Suaviza a transição do hover */
+}
+
+.espacos-toggle-item:hover, .espacos-toggle-item.active:hover {
+  color: #007BFF; /* Altera a cor do texto no hover */
+  text-decoration: underline; /* Adiciona sublinhado ao passar o mouse */
+}
+
+#btnAddEspaco {
+  display: block; /* Torna o botão um bloco */
+  margin: 0 auto; /* Centraliza o botão horizontalmente */
+  padding: 10px 20px; /* Ajuste do padding para melhorar a aparência */
+  font-size: 1.2em; /* Tamanho da fonte */
+  background-color: #007BFF; /* Cor de fundo do botão */
+  color: white; /* Cor do texto */
+  border: none; /* Remove bordas */
+  border-radius: 5px; /* Bordas arredondadas */
+  cursor: pointer; /* Indica que é clicável */
+  text-align: center; /* Centraliza o texto no botão */
+  transition: all 0.3s ease; /* Transição suave */
+}
+
+#btnAddEspaco:hover {
+  background-color: #0056b3; /* Cor de fundo ao passar o mouse */
+}
+
+h2 {
+  text-align: center;
+}
+
+.modal-content button {
+  padding: 10px 20px;
+  font-size: 1.1em;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin: 10px 15px;
+  transition: all 0.3s ease;
+  font-weight: bold;
+}
+
+/* Botão 'Sim' - Cancelar */
+.modal-content button:first-child {
+  background-color: #e74c3c; /* Vermelho */
+  color: white;
+  border: 2px solid #e74c3c;
+}
+
+/* Botão 'Não' - Fechar */
+.modal-content button:nth-child(2) {
+  background-color: #2ecc71; /* Verde */
+  color: white;
+  border: 2px solid #2ecc71;
+}
+
+/* Efeito de hover para ambos os botões */
+.modal-content button:hover {
+  opacity: 0.9;
+  transform: scale(1.05); /* Um pequeno aumento de tamanho no hover */
+}
+
+#espacos-lista{
+  text-align: center;
+}
+
+#form-reserva {
+  width: 100%;
+  max-width: 400px; /* Tamanho máximo do formulário */
+  margin: 0 auto; /* Centraliza o formulário na tela */
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+}
+
+/* Título do formulário */
+#form-reserva h2 {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+/* Estilo dos labels */
+#form-reserva label {
+  font-size: 1.1em;
+  font-weight: bold;
+  display: block;
+  margin-bottom: 8px;
+}
+
+/* Estilo dos inputs e select */
+#form-reserva input,
+#form-reserva select {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 15px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  font-size: 1em;
+}
+
+/* Estilo do botão */
+#form-reserva button {
+  width: 100%;
+  padding: 12px;
+  font-size: 1.2em;
+  background-color: #3498db;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+/* Efeito de hover no botão */
+#form-reserva button:hover {
+  background-color: #2980b9;
+}
